Fix modal text spillover by adding scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2244,6 +2244,8 @@ input, select, textarea {
         background-color: #181A1B;
         width: 80%;
         max-width: 1000px;
+        max-height: 80vh;
+        overflow: auto;
     }
 
     .modal.active {
